deploy/dev/kind/odoo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odoo
  namespace: odoo
spec:
  ingressClassName: traefik
  tls:
    - hosts: [odoo.localhost]
      secretName: odoo-dev-tls
  rules:
    - host: odoo.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: odoo
                port:
                  name: http
